--- a/examples/01-basic-context/package.json
+++ b/examples/01-basic-context/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "beaconlog-example-01-basic-context",
+  "name": "systropy-example-01-basic-context",
   "version": "1.0.0",
   "private": true,
   "type": "module",
   "description": "A simple example demonstrating the basic usage of the ContextManager and automatic context in logs.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-2": "node index2.js",
+    "start-3": "node index3.js"
+
   },
   "dependencies": {
-    "beaconlog": "file:../.."
+    "syntropylog": "file:../.."
   }
 }
