example-1 rotate-files

--- a/examples/01-basic-context/package.json
+++ b/examples/01-basic-context/package.json
@@ -9,9 +9,9 @@
     "start": "node index.js",
     "start-2": "node index2.js",
     "start-3": "node index3.js"
-
   },
   "dependencies": {
+   "rotating-file-stream": "^3.2.1",
     "syntropylog": "file:../.."
   }
 }
