--- a/examples/02-context-ts/package.json
+++ b/examples/02-context-ts/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "beaconlog": "file:../..",
+    "syntropylog": "file:../..",
     "express": "^5.1.0"
   },
   "devDependencies": {
