--- a/examples/03-got/package.json
+++ b/examples/03-got/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "beaconlog": "file:../..",
+    "syntropylog": "file:../..",
     "got": "^14.4.7"
   },
   "devDependencies": {
