--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "build": "npm run clean && rollup -c",
     "dev": "rollup -c -w",
     "clean": "rimraf dist",
-    "lint": "eslint . --ext .ts --fix",
+    "lint": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vitest run",
     "check:deps": "depcheck",
     "test:coverage": "vitest run --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -99,12 +100,15 @@
     "@types/on-finished": "^2.3.4",
     "@types/uuid": "^9.0.7",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^1.6.1",
     "depcheck": "^1.4.7",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "nock": "^13.4.0",
     "prettier": "^3.1.1",
     "redis": "^4.6.12",
@@ -112,7 +116,7 @@
     "rollup": "^4.9.2",
     "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "vitest": "^1.1.0"
   },
   "peerDependencies": {
