--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,7 @@ jobs:
         # "build" debería ejecutar tsc, e.g.: "tsc --project tsconfig.json"
 
       - name: Run tests
-        run: vitest run --coverage
-        # Supone un script "test" que ejecute Vitest o Jest: e.g. "vitest run --coverage"
+        run: npm run test:coverage
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
