--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,19 +7,17 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  build-and-test:
+  primary-build:
+    name: "Build & Test (Node 18.x)"
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x] # Probar en las versiones LTS actuales
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18.x
           cache: 'npm'
 
       - name: Install dependencies
@@ -27,13 +25,11 @@ jobs:
 
       - name: Lint code
         run: npm run lint
-        # Asegúrate de tener un script "lint" en tu package.json, e.g.: "eslint 'src/**/*.{ts,js}' --fix"
 
       - name: Build TypeScript
         run: npm run build
-        # "build" debería ejecutar tsc, e.g.: "tsc --project tsconfig.json"
 
-      - name: Run tests
+      - name: Run tests and generate coverage
         run: npm run test:coverage
 
       - name: Upload coverage report
@@ -47,3 +43,26 @@ jobs:
         with:
           directory: ./coverage/
           token: ${{ secrets.CODECOV_TOKEN }}
+
+  test-matrix:
+    name: "Test Matrix (Node ${{ matrix.node-version }})"
+    needs: primary-build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x, 22.x]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test # No necesitamos cobertura aquí, solo confirmar que pasan
