--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Build TypeScript
         run: npm run build
 
+      - name: Security Audit
+        run: npm audit --audit-level=high
+
       - name: Run tests and generate coverage
         run: npm run test:coverage
 
