--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,5 +67,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build TypeScript
+        run: npm run build
+
       - name: Run tests
         run: npm run test # No necesitamos cobertura aquí, solo confirmar que pasan
