--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "url": "git+https://github.com/Syntropysoft/beaconlog.git"
   },
   "dependencies": {
+    "amqplib": "^0.10.8",
     "async-retry": "^1.3.3",
     "axios": "^1.10.0",
     "chalk": "^5.3.0",
@@ -93,6 +94,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/amqplib": "^0.10.7",
     "@types/async-retry": "^1.4.8",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
