--- a/examples/45-custom-http-adapter/tsconfig.json
+++ b/examples/45-custom-http-adapter/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "outDir": "./dist"
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"]
 } 
