--- a/examples/75-full-stack-correlation-http-redis/package.json
+++ b/examples/75-full-stack-correlation-http-redis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-full-stack-correlation-http-redis",
+  "name": "75-full-stack-correlation-http-redis",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,10 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.10.0",
-    "kafkajs": "^2.2.4",
+    "redis": "^4.6.15",
     "syntropylog": "file:../.."
   },
   "devDependencies": {
-    "nock": "^13.5.6",
     "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   }
