--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "2181:2181"
+      - '2181:2181'
 
   kafka1:
     image: confluentinc/cp-kafka:7.4.0
@@ -14,7 +14,7 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - '9092:9092'
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -30,7 +30,7 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9093:9093"
+      - '9093:9093'
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -45,9 +45,9 @@ services:
     container_name: kafdrop-example
     restart: always
     ports:
-      - "9000:9000"
+      - '9000:9000'
     environment:
-      KAFKA_BROKERCONNECT: "kafka1:29092,kafka2:29093"
+      KAFKA_BROKERCONNECT: 'kafka1:29092,kafka2:29093'
     depends_on:
       - kafka1
       - kafka2
@@ -57,8 +57,8 @@ services:
     container_name: rabbitmq-example
     restart: always
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - '5672:5672'
+      - '15672:15672'
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: password
@@ -67,14 +67,63 @@ services:
     image: fluent/fluent-bit:2.2.2
     container_name: fluent-bit-collector
     ports:
-      - "5170:5170/udp"
+      - '5170:5170/udp'
     volumes:
-      - ./examples/90-custom-transport-compliance/config/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./90-custom-transport-compliance/config/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
 
   nats:
     image: nats:latest
     container_name: nats-example
     restart: always
     ports:
-      - "4222:4222" # Client port
-      - "8222:8222" # HTTP management port 
+      - '4222:4222' # Client port
+      - '8222:8222' # HTTP management port
+
+  redis:
+    image: 'redis:alpine'
+    container_name: redis-example
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis-data:/data
+
+  api-gateway:
+    build:
+      context: ..
+      dockerfile: examples/80-full-stack-nats/Dockerfile
+    container_name: api-gateway-example
+    ports:
+      - '3000:3000'
+    command: node dist/api-gateway/index.js
+    depends_on:
+      - sales-service
+      - nats
+    profiles:
+      - nats-app
+
+  sales-service:
+    build:
+      context: ..
+      dockerfile: examples/80-full-stack-nats/Dockerfile
+    container_name: sales-service-example
+    ports:
+      - '3001:3001'
+    command: node dist/sales-service/index.js
+    depends_on:
+      - nats
+    profiles:
+      - nats-app
+
+  dispatch-service:
+    build:
+      context: ..
+      dockerfile: examples/80-full-stack-nats/Dockerfile
+    container_name: dispatch-service-example
+    command: node dist/dispatch-service/index.js
+    depends_on:
+      - nats
+    profiles:
+      - nats-app
+
+volumes:
+  redis-data:
