--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
     "LICENSE",
     "README.md"
   ],
+  "workspaces": [
+    "examples/*"
+  ],
   "scripts": {
     "build": "npm run clean && rollup -c",
     "dev": "rollup -c -w",
-    "clean": "rimraf dist",
+    "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vitest run",
@@ -81,7 +84,7 @@
     "amqplib": "^0.10.8",
     "async-retry": "^1.3.3",
     "axios": "^1.10.0",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "inquirer": "^9.2.12",
     "js-yaml": "^4.1.0",
     "on-finished": "^2.4.1",
@@ -94,7 +97,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/amqplib": "^0.10.7",
+    "@types/amqplib": "^0.10.4",
     "@types/async-retry": "^1.4.8",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
@@ -104,9 +107,9 @@
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^1.6.1",
+    "@vitest/coverage-v8": "^1.1.0",
     "depcheck": "^1.4.7",
-    "eslint": "^8.57.1",
+    "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
