--- a/examples/110-diagnostics-doctor/package.json
+++ b/examples/110-diagnostics-doctor/package.json
@@ -4,7 +4,7 @@
   "description": "SyntropyLog example demonstrating how to use the diagnostics doctor.",
   "private": true,
   "scripts": {
-    "check": "syntropylog doctor"
+    "check": "node ../../node_modules/.bin/syntropylog doctor"
   },
   "keywords": [
     "syntropylog",
