--- a/examples/80-full-stack-nats/tsconfig.json
+++ b/examples/80-full-stack-nats/tsconfig.json
@@ -1,10 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "outDir": "./dist"
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "composite": true,
+    "outDir": "./dist",
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "references": [
+    {
+      "path": "../../src"
+    }
+  ]
 }
