--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.3.0",
+  "version": "0.4.1",
   "description": "A modern, composable observability framework for Node.js",
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
@@ -65,7 +65,8 @@
     "examples/*"
   ],
   "scripts": {
-    "build": "npm run clean && rollup -c",
+    "build": "npm run clean && npm run build:types && rollup -c",
+    "build:types": "tsc -p src/tsconfig.json",
     "dev": "rollup -c -w",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts --fix",
@@ -80,7 +81,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Syntropysoft/beaconlog.git"
+    "url": "git+https://github.com/Syntropysoft/SyntropyLog.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "amqplib": "^0.10.8",
@@ -99,6 +103,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-swc": "^0.4.0",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/amqplib": "^0.10.4",
     "@types/async-retry": "^1.4.8",
@@ -138,6 +143,6 @@
     }
   },
   "lint-staged": {
-    "*.ts": "eslint --fix"
+    "src/**/*.ts": "eslint --fix --max-warnings=0"
   }
 }
