--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "declarationDir": "./dist/types",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "bundler"
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "tests/**/*.ts",
-    "test_integration/**/*.ts",
-    "examples/**/*.ts",
-    "declarations.d.ts"
+  "files": ["declarations.d.ts"],
+  "references": [
+    { "path": "./src" },
+    { "path": "./tests" },
+    { "path": "./test_integration" },
+    { "path": "./examples/01-hello-world" },
+    { "path": "./examples/20-context-ts" },
+    { "path": "./examples/30-data-masking" },
+    { "path": "./examples/40-basic-http-correlation" },
+    { "path": "./examples/45-custom-http-adapter" },
+    { "path": "./examples/50-basic-kafka-correlation" },
+    { "path": "./examples/60-advanced-rabbitmq-broker" },
+    { "path": "./examples/70-full-stack-correlation" },
+    { "path": "./examples/80-full-stack-nats" },
+    { "path": "./examples/90-compliance-retention" },
+    { "path": "./examples/100-custom-serializers" }
   ]
 }
