feat: implement robust serialization pipeline with precision architecture v0.5.9
- Implemented intelligent serialization pipeline with precise complexity tracking
- Enhanced SerializationManager with accurate metrics distribution
- Fixed pipeline to respect sanitization configuration (no more hardcoded values)
- Corrected complexity mapping: COMPLEX → medium, CRITICAL → high

- Pipeline terminates immediately on serialization failures (no rescue attempts)
- SerializationStep now uses actual serializer complexity instead of hardcoded values
- Removed fallback to 'simple' when complexity is undefined (now uses null)
- Fixed SerializationManager to properly track serializer and complexity distribution

- Updated test coverage: 94.53% across 604+ tests (45 test files)
- Fixed tests to use explicit serializer registration (no global mocks)
- Corrected test expectations to match actual enum values
- Added proper getComplexity() method to all test serializers

- Fixed sanitization always being true regardless of configuration
- Fixed complexity distribution counting 2 instead of 1 due to hardcoded values
- Fixed SerializationStep not using actual serializer complexity
- Fixed test serializers missing required getComplexity() method

- Updated README with v0.5.9 achievements and current test metrics
- Added "Latest Achievements" section highlighting precision architecture
- Updated coverage badge to reflect 94.53% (604+ tests)

- None - all changes are internal improvements

This release establishes SyntropyLog as a precision-focused observability framework with surgical accuracy in error handling and comprehensive test coverage.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/syntropyLog-examples"]
 	path = modules/syntropyLog-examples
 	url = https://github.com/Syntropysoft/syntropylog-examples-.git
+[submodule "external-adapters"]
+	path = external-adapters
+	url = https://github.com/Syntropysoft/syntropylog-adapters.git
