--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "A modern, composable observability framework for Node.js",
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
@@ -63,7 +63,7 @@
   ],
   "workspaces": [
     "examples/*",
-    "external-adapters-package"
+    "external-adapters"
   ],
   "scripts": {
     "build": "npm run clean && npm run build:types && rollup -c",
