refactor: reorganize modules structure for consistency
- Rename external-adapters to @syntropylog/adapters
- Rename syntropyLog-examples to @syntropylog/examples
- Update .gitmodules with new paths
- Update package.json workspaces
- Update .gitignore exceptions
- Update setup script for new structure

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "modules/syntropyLog-examples"]
-	path = modules/syntropyLog-examples
+[submodule "modules/@syntropylog/examples"]
+	path = modules/@syntropylog/examples
 	url = https://github.com/Syntropysoft/syntropylog-examples-.git
-[submodule "modules/external-adapters"]
-	path = modules/external-adapters
+[submodule "modules/@syntropylog/adapters"]
+	path = modules/@syntropylog/adapters
 	url = https://github.com/Syntropysoft/syntropylog-adapters.git
 [submodule "modules/@syntropylog/types"]
 	path = modules/@syntropylog/types
