--- a/package.json
+++ b/package.json
@@ -63,9 +63,12 @@
   ],
   "workspaces": [
     "examples/*",
-    "external-adapters"
+    "modules/@syntropylog/adapters",
+    "modules/@syntropylog/types"
   ],
   "scripts": {
+    "setup": "node scripts/setup-env.js",
+    "postinstall": "npm run setup",
     "build": "npm run clean && npm run build:types && rollup -c",
     "build:types": "tsc -p src/tsconfig.json",
     "dev": "rollup -c -w",
@@ -99,6 +102,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@syntropylog/types": "file:./modules/@syntropylog/types",
     "amqplib": "^0.10.8",
     "async-retry": "^1.3.3",
     "axios": "^1.10.0",
