--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.5.13-alpha.0",
+  "version": "0.5.13-alpha.1",
   "description": "A modern, composable observability framework for Node.js",
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
@@ -103,15 +103,10 @@
   },
   "dependencies": {
     "@syntropylog/types": "file:./modules/@syntropylog/types",
-    "amqplib": "^0.10.8",
-    "async-retry": "^1.3.3",
-    "axios": "^1.10.0",
     "chalk": "^4.1.2",
     "inquirer": "^9.2.12",
     "js-yaml": "^4.1.0",
-    "on-finished": "^2.4.1",
     "regex-test": "^0.1.1",
-    "uuid": "^9.0.1",
     "yargs": "^17.7.2",
     "zod": "^3.22.4"
   },
@@ -119,33 +114,24 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-swc": "^0.4.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/amqplib": "^0.10.4",
-    "@types/async-retry": "^1.4.8",
+    "@redis/client": "^1.5.14",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.5",
-    "@types/on-finished": "^2.3.4",
-    "@types/safe-regex": "^1.1.6",
-    "@types/uuid": "^9.0.7",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^1.1.0",
     "depcheck": "^1.4.7",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "nock": "^13.4.0",
     "prettier": "^3.1.1",
     "redis": "^4.6.12",
-    "rimraf": "^5.0.5",
     "rollup": "^4.9.2",
     "rollup-plugin-dts": "^6.1.0",
-    "safe-regex": "^2.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.8.3",
     "vitest": "^1.1.0"
