--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.6.4-alpha.0",
+  "version": "0.6.5-alpha.0",
   "description": "A modern, composable observability framework for Node.js",
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
@@ -132,7 +132,8 @@
     "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.8.3",
-    "vitest": "^1.1.0"
+    "vitest": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0"
   },
   "peerDependencies": {
     "redis": "^4.6.12"
