fix: resolve correlationId propagation issue and update examples to v0.6.7
- Fix correlationId auto-generation logic in ContextManager and MockContextManager
- Update getCorrelationId() to always return string (never undefined)
- Fix getTraceContextHeaders() to respect active context state
- Update all examples to use syntropylog@0.6.7
- Validate correlationId propagation across HTTP, Kafka, RabbitMQ, and NATS
- All examples (00-24) now working with proper correlationId propagation
- Update README with alpha warning for v0.6.7

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.6.7-alpha.0",
+  "version": "0.6.7",
   "description": "A modern, composable observability framework for Node.js",
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
@@ -8,7 +8,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "syntropylog": "./dist/cli.js"
+    "syntropylog": "dist/cli.js"
   },
   "exports": {
     ".": {
