feat: Add comprehensive testing examples with SyntropyLogMock
- Add example 28: Testing patterns with Vitest
- Add example 29: Testing patterns with Jest
- Add example 30: Testing Redis context patterns
- Add SyntropyLogMock that eliminates connection boilerplate
- Add BeaconRedisMock for in-memory Redis testing
- Add comprehensive documentation in Docusaurus
- Add test helpers for simplified setup and teardown
- Focus on declarative, behavior-focused testing patterns

--- a/package.json
+++ b/package.json
@@ -54,6 +54,16 @@
         "types": "./dist/testing/index.d.ts",
         "default": "./dist/testing/index.cjs"
       }
+    },
+    "./testing/mock": {
+      "import": {
+        "types": "./dist/testing/SyntropyLogMock.d.ts",
+        "default": "./dist/testing/SyntropyLogMock.mjs"
+      },
+      "require": {
+        "types": "./dist/testing/SyntropyLogMock.d.ts",
+        "default": "./dist/testing/SyntropyLogMock.cjs"
+      }
     }
   },
   "files": [
