feat: Add syntropylog-examples submodule
- Added complete examples repository from https://github.com/Syntropysoft/syntropylog-examples
- Includes 37+ examples covering all framework features
- Includes test scripts, documentation, and Docker services
- Ready for development and testing

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/@syntropylog/types"]
 	path = modules/@syntropylog/types
 	url = https://github.com/Syntropysoft/syntropylog-types.git
+[submodule "modules/examples"]
+	path = modules/examples
+	url = https://github.com/Syntropysoft/syntropylog-examples.git
