--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "syntropylog": "dist/cli.js"
+    "syntropylog": "dist/cli.cjs"
   },
   "exports": {
     ".": {
