fix: resolve Vite CJS deprecation warning and fix InstrumentedBrokerClient tests
- Migrate vitest configs from .ts to .mjs for ESM compatibility
- Fix InstrumentedBrokerClient test mocks to work with current implementation
- Downgrade inquirer to v8.x for CommonJS compatibility
- Add .nvmrc file for Node.js version management
- Update package.json scripts to use new ESM config files
- All tests now passing (769 passed, 2 skipped)
- Doctor CLI fully functional and tested

Resolves GitHub pipeline warning about deprecated Vite CJS Node API

--- a/package.json
+++ b/package.json
@@ -84,9 +84,9 @@
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "vitest --run --reporter=verbose",
-    "test:coverage": "vitest run --coverage",
-    "test:integration": "vitest run -c vitest.integration.config.ts",
+    "test": "vitest --run --reporter=verbose --config vitest.config.mjs",
+    "test:coverage": "vitest run --coverage --config vitest.config.mjs",
+    "test:integration": "vitest run -c vitest.integration.config.mjs",
     "test:all": "npm test && npm run test:integration",
     "check:deps": "depcheck",
     "prepublishOnly": "npm run build",
@@ -113,7 +113,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "flatted": "^3.3.3",
-    "inquirer": "^9.2.12",
+    "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
     "regex-test": "^0.1.1",
     "yargs": "^17.7.2",
