feat: actualizar package.json con nuevo posicionamiento
- Actualizar descripción: 'An instance manager with observability for Node.js applications'
- Agregar keywords completas para SEO y descubrimiento
- Incluir keywords de instance-management, enterprise, compliance, etc.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,65 @@
 {
   "name": "syntropylog",
-  "version": "0.7.4",
-  "description": "A modern, composable observability framework for Node.js",
+  "version": "0.7.5",
+  "description": "An instance manager with observability for Node.js applications",
+  "keywords": [
+    "instance-manager",
+    "instance-management",
+    "resource-management",
+    "lifecycle-management",
+    "resource-pooling",
+    "singleton",
+    "observability",
+    "logging",
+    "distributed-tracing",
+    "correlation",
+    "contextual-logging",
+    "context-propagation",
+    "trace-context",
+    "trace-propagation",
+    "request-context",
+    "microservices",
+    "service-mesh",
+    "devsecops",
+    "audit-logging",
+    "audit-trail",
+    "compliance",
+    "log-compliance",
+    "masking",
+    "data-masking",
+    "gdpr",
+    "log-retention",
+    "log-security",
+    "enterprise",
+    "enterprise-logging",
+    "production-ready",
+    "resilient-logging",
+    "performance-logging",
+    "structured-logging",
+    "log-aggregation",
+    "log-enrichment",
+    "error-logging",
+    "redis",
+    "http-client",
+    "message-broker",
+    "kafka",
+    "rabbitmq",
+    "nats",
+    "express",
+    "fastify",
+    "koa",
+    "nestjs",
+    "nodejs",
+    "typescript",
+    "monitoring",
+    "tracing",
+    "event-driven",
+    "service-observability",
+    "microservice-observability",
+    "infrastructure-logging",
+    "kubernetes",
+    "production-logging"
+  ],
   "author": "Gabriel Alejandro Gomez",
   "license": "Apache-2.0",
   "main": "./dist/index.cjs",
