chore: update dependencies, migrate to ESLint flat config, and bump version to 0.8.1
- Migrated ESLint to v9 flat configuration (eslint.config.js)
- Updated Zod and Redis to stable versions (Zod 3, Redis 4)
- Updated Rollup and Vitest to latest versions
- Refactored test mocks for Vitest 4 compatibility
- Fixed Redis cluster initialization and type mismatches
- Updated public API snapshots
- Bumped project version to 0.8.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "An instance manager with observability for Node.js applications",
   "keywords": [
     "instance-manager",
@@ -133,7 +133,7 @@
     "build:types": "tsc -p src/tsconfig.json",
     "dev": "rollup -c -w",
     "clean": "rm -rf dist",
-    "lint": "eslint src --ext .ts --fix",
+    "lint": "eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vitest --run --reporter=verbose --config vitest.config.mjs",
     "test:coverage": "vitest run --coverage --config vitest.config.mjs",
@@ -162,40 +162,42 @@
     "access": "public"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.4.1",
     "flatted": "^3.3.3",
-    "inquirer": "^8.2.6",
-    "js-yaml": "^4.1.0",
+    "inquirer": "^13.3.0",
+    "js-yaml": "^4.1.1",
     "regex-test": "^0.1.1",
-    "yargs": "^17.7.2",
-    "zod": "^3.22.4"
+    "yargs": "^18.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@redis/client": "^1.5.14",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@eslint/js": "^9.21.0",
+    "@redis/client": "^1.6.1",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/inquirer": "^9.0.7",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/inquirer": "^9.0.9",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.10.5",
-    "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@types/node": "^22.13.5",
+    "@types/yargs": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitest/coverage-v8": "^4.0.18",
     "depcheck": "^1.4.7",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.2",
-    "prettier": "^3.1.1",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.5.1",
     "redis": "^4.6.12",
-    "rollup": "^3.29.5",
-    "rollup-plugin-dts": "^6.1.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
+    "rollup": "^4.34.8",
+    "rollup-plugin-dts": "^6.1.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.56.1",
+    "vitest": "^4.0.18"
   },
   "peerDependencies": {
     "redis": "^4.6.12"
