chore: set Node.js 20 as base version
- Added .nvmrc with version 20
- Added engines field to package.json specifying >=20.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "syntropylog",
   "version": "0.8.1",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "description": "An instance manager with observability for Node.js applications",
   "keywords": [
     "instance-manager",
