--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -18,21 +18,27 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 10
+        run_install: false
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
+        cache: 'pnpm'
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
-    - name: Run npm audit
-      run: npm audit --audit-level=moderate
-      
-    - name: Run npm audit (JSON output for badge)
+    - name: Run audit
+      run: pnpm audit --audit-level=moderate
+
+    - name: Run audit (JSON output for badge)
       run: |
-        npm audit --audit-level=moderate --json > audit-report.json || echo '{"vulnerabilities": {}}' > audit-report.json
+        pnpm audit --audit-level=moderate --json > audit-report.json || echo '{"vulnerabilities": {}}' > audit-report.json
       
     - name: Generate security badge
       run: |
